# qplane

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_flags.txt
engine/: CMakeLists.txt  engine.cpp  engine.hpp  window.cpp  window.hpp
engine/core/: core-assert.hpp  core-config.hpp  core-io.hpp  core.hpp
engine/events/: event-dispatcher.cpp  event-dispatcher.hpp  event.hpp
engine/rendering/: renderer.cpp  renderer.hpp
game/: main.cpp
